--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app/server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js --timeout 5000",
     "test-watch": "nodemon --exec \"npm test\"",
-    "docker:build": "docker build -t node-chat-app ."
+    "docker:build": "docker build -t node-chat-app .",
+    "docker:start": "docker run -p 3000:3000  node-chat-app"
   },
   "engines": {
     "node": "9.5.0"
